WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54868
ProcessingInstruction does not provide a way to know if it is of CSS type.
https://bugs.webkit.org/show_bug.cgi?id=54868
Summary
ProcessingInstruction does not provide a way to know if it is of CSS type.
Vsevolod Vlasov
Reported
2011-02-21 04:36:40 PST
This functionality is needed for implementing XML viewer (see
https://bugs.webkit.org/show_bug.cgi?id=13807
).
Attachments
Patch
(2.90 KB, patch)
2011-02-21 05:12 PST
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-02-21 05:12:41 PST
Created
attachment 83152
[details]
Patch
WebKit Commit Bot
Comment 2
2011-02-21 11:59:13 PST
Comment on
attachment 83152
[details]
Patch Clearing flags on attachment: 83152 Committed
r79244
: <
http://trac.webkit.org/changeset/79244
>
WebKit Commit Bot
Comment 3
2011-02-21 11:59:17 PST
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 4
2019-02-06 09:03:00 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug