2011-02-21  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        ProcessingInstruction should provide a way to know if it is of CSS type.
        https://bugs.webkit.org/show_bug.cgi?id=54868

        * dom/ProcessingInstruction.cpp:
        (WebCore::ProcessingInstruction::ProcessingInstruction):
        (WebCore::ProcessingInstruction::checkStyleSheet):
        (WebCore::ProcessingInstruction::setCSSStyleSheet):
        * dom/ProcessingInstruction.h:
        (WebCore::ProcessingInstruction::isCSS):

Canonical link: https://commits.webkit.org/69171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79244 268f45cc-cd09-0410-ab3c-d52691b4dbfc